[package]
name = "txn_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "txn_engine"
path = "src/lib.rs"

[dependencies]
rust_decimal = "1.17.0"
csv = "1.1.6"
thiserror = "2.0.10"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.0"
rand = "0.8.4"
tempfile = "3.3.0"
dashmap = "5.2.0"


