[package]
name = "txn_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "txn_engine"
path = "src/lib.rs"

[dependencies]
csv = "1.1.6"
thiserror = "2.0.10"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde-arbitrary-precision"] }
sysinfo = "0.33.0"
rand = "0.8.4"
tempfile = "3.3.0"
dashmap = "6.0.1"
chrono = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
csv-async = { version = "1.3", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3"